# trino

./: docker-compose.yaml  pyproject.toml
.devcontainer/: devcontainer.json  setup.sh
config/catalog/: postgresql.properties
config/coordinator/: config.properties  node.properties
config/worker/: node.properties
