[tool.poetry]
name = "trino snippets"
version = "0.1.0"
description = "My notes on Trino"
authors = ["José Nunes <josenunesra@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]

[tool.mypy]
exclude = []
cache_dir = "/tmp/.mypy_cache"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
